# lurk

./: .gitignore  AGENTS.md  Cargo.toml  README.md
launchd/: com.user.lurk.plist  com.user.lurk.plist.template
scripts/: install.sh  uninstall.sh
src/: main.rs
src/analysis/: filters.rs  frequency.rs  mod.rs  timing.rs
src/cli/: export.rs  mod.rs  stats.rs
src/daemon/: app_tracker.rs  event_monitor.rs  mod.rs  permissions.rs
src/models/: event.rs  keycode.rs  mod.rs
src/storage/: database.rs
src/tui/: app.rs  keyboard_layout.rs  mod.rs
src/tui/views/: fingers.rs  mod.rs  overview.rs  timing.rs  trends.rs
src/tui/widgets/: keyboard.rs  mod.rs
